--- a/app/src/main/res/menu/menu_act_note.xml
+++ b/app/src/main/res/menu/menu_act_note.xml
@@ -66,7 +66,7 @@
 
                 <item
                     android:id="@+id/menu_actNote_check"
-                    android:icon="@drawable/ic_check"
+                    android:icon="@drawable/ic_check_all"
                     android:title="@string/menu_note_check_all"
                     app:showAsAction="always|withText" />
 
