--- a/app/src/main/res/values/str_test.xml
+++ b/app/src/main/res/values/str_test.xml
@@ -4,10 +4,22 @@
     <!-- Test strings for layout -->
 
     <!-- Item note test -->
-    <string name="test_item_note_roll_1" translatable="false">Купить молоко, зарплата, сходить в банк</string>
-    <string name="test_item_note_roll_2" translatable="false">Это отсылка к POSTAL2))</string>
-    <string name="test_item_note_roll_3" translatable="false">Жаль что это никто не увидит</string>
-    <string name="test_item_note_roll_4" translatable="false">Хотя Аринка увидит. Привет Арин :*</string>
+
+    <string name="test_note_name" translatable="false">Не глупое заглавие заметки</string>
+
+    <string name="test_note_text" translatable="false">
+        Хочется лежать на подушечках из манго и кушать очень мягкую маршмеллоу.
+        А когда проснёшься не забудь вкусно покушать снова. Снова и снова.
+        А так же не забудь надеть носочки, чтобы грело! Чтобы было тепло и уютно.
+    </string>
+
+    <string name="test_note_roll_1" translatable="false">Купить молоко, зарплата, сходить в банк.</string>
+    <string name="test_note_roll_2" translatable="false">Это отсылка к POSTAL2))</string>
+    <string name="test_note_roll_3" translatable="false">Жаль что это никто не увидит.</string>
+    <string name="test_note_roll_4" translatable="false">Хотя Аринка увидит. Привет Арин :*</string>
+
+    <string name="test_note_time" translatable="false">25 Авг 2018</string>
+    <string name="test_note_done" translatable="false">3/5</string>
 
     <!-- Activity develop test -->
     <string name="test_note_data_base" translatable="false">Note Data Base:</string>
