--- a/app/src/main/res/values/sty_item_note.xml
+++ b/app/src/main/res/values/sty_item_note.xml
@@ -33,15 +33,6 @@
         <item name="android:textSize">@dimen/text_18sp</item>
     </style>
 
-    <style name="ItemNote.Text">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:maxLines">5</item>
-        <item name="android:textColor">?attr/clText</item>
-        <item name="android:textSize">@dimen/text_16sp</item>
-    </style>
-
     <style name="ItemNote.Roll">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -53,25 +44,36 @@
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
+    <style name="ItemNote.Text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">5</item>
+        <item name="android:textColor">?attr/clText</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
     <style name="ItemNote.Info">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">?attr/clInfo</item>
+        <item name="android:textColor">?attr/clNoteInfoText</item>
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
     <style name="ItemNote.Indicator.Info">
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
-        <item name="android:tint">?attr/clInfoIndicator</item>
+        <item name="android:tint">?attr/clNoteIndicator</item>
     </style>
 
-    <style name="ItemNote.Color"/>
+    <style name="ItemNote.Color" />
 
     <style name="ItemNote.Color.Vertical">
         <item name="android:layout_width">@dimen/layout_4dp</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginStart">@dimen/layout_4dp</item>
+        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
     </style>
 
     <style name="ItemNote.Color.Horizontal">
