--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -48,8 +48,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_enter_name"
+                        android:importantForAutofill="noExcludeDescendants"
                         android:text='@={noteItem.name}'
                         android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
+                        tools:targetApi="o"
                         tools:text="@string/test_note_name"/>
 
                 <HorizontalScrollView
