--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -18,24 +18,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <LinearLayout
+        <include
+                layout="@layout/include_toolbar_note"
+                app:keyEdit='@{keyEdit}'
+                app:noteItem='@{noteItem}'/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/roll_recycler"
+                style="@style/RecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-            <include
-                    layout="@layout/include_toolbar_note"
-                    app:keyEdit='@{keyEdit}'
-                    app:noteItem='@{noteItem}'/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/roll_recycler"
-                    style="@style/RecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-        </LinearLayout>
+                android:layout_weight="1"/>
 
         <LinearLayout
                 android:id="@+id/panel_container"
@@ -60,8 +53,10 @@
                         android:layout_weight="1"
                         android:hint="@string/hint_enter_roll"
                         android:imeOptions="flagNoFullscreen"
+                        android:importantForAutofill="noExcludeDescendants"
                         android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                        android:maxLines="5"/>
+                        android:maxLines="5"
+                        tools:targetApi="o"/>
 
                 <ImageButton
                         android:id="@+id/add_button"
