--- a/app/src/main/res/layout/include_toolbar_rank.xml
+++ b/app/src/main/res/layout/include_toolbar_rank.xml
@@ -35,14 +35,17 @@
                 <EditText
                         android:id="@+id/rank_enter"
                         style="@style/Enter.Text"
+
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:hint="@string/hint_enter_rank_new"
                         android:imeOptions="flagNoFullscreen|actionDone"
+                        android:importantForAutofill="noExcludeDescendants"
                         android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
                         android:maxLength="@integer/length_rank_name"
-                        android:maxLines="1"/>
+                        android:maxLines="1"
+                        tools:targetApi="o"/>
 
                 <ImageButton
                         android:id="@+id/add_button"
