--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -46,7 +46,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@null"
+                    android:importantForAutofill="noExcludeDescendants"
                     android:text='@{rollItem.text}'
+                    tools:targetApi="o"
                     tools:text="@string/test_note_roll"/>
 
         </LinearLayout>
