--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -74,6 +74,39 @@
 
         </FrameLayout>
 
+        <View style="@style/Divider.Horizontal"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/clBackgroundView">
+
+            <ImageButton
+                    style="@style/Enter.Button"
+                    android:contentDescription="@null"
+                    android:tint="?attr/clIcon"
+                    app:srcCompat="@drawable/ic_undo"/>
+
+            <ImageButton
+                    style="@style/Enter.Button"
+                    android:contentDescription="@null"
+                    android:tint="?attr/clSecond"
+                    app:srcCompat="@drawable/ic_redo"/>
+
+            <ImageButton
+                    style="@style/Enter.Button"
+                    android:contentDescription="@null"
+                    android:tint="?attr/clIcon"
+                    app:srcCompat="@drawable/ic_rank"/>
+
+            <ImageButton
+                    style="@style/Enter.Button"
+                    android:contentDescription="@null"
+                    android:tint="?attr/clIcon"
+                    app:srcCompat="@drawable/ic_palette"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </layout>
