Начало добавления панели для управления заметкой

--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -5,11 +5,9 @@
 
     <data>
 
-        <import alias="v"
-                type="android.view.View"/>
+        <import alias="v" type="android.view.View"/>
 
-        <variable name="rankItem"
-                  type="sgtmelon.scriptum.app.model.item.RankItem"/>
+        <variable name="rankItem" type="sgtmelon.scriptum.app.model.item.RankItem"/>
 
     </data>
 
