--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -6,17 +6,11 @@
     <data>
 
         <import type="java.util.List"/>
-
         <import type="sgtmelon.scriptum.office.Help.Time"/>
+        <import alias="def" type="sgtmelon.scriptum.office.annot.def.TypeNoteDef"/>
+        <import alias="v" type="android.view.View"/>
 
-        <import alias="def"
-                type="sgtmelon.scriptum.office.annot.def.TypeNoteDef"/>
-
-        <import alias="v"
-                type="android.view.View"/>
-
-        <variable name="noteItem"
-                  type="sgtmelon.scriptum.app.model.item.NoteItem"/>
+        <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
     </data>
 
