--- a/app/src/main/res/layout/include_item_note_roll.xml
+++ b/app/src/main/res/layout/include_item_note_roll.xml
@@ -4,8 +4,7 @@
 
     <data>
 
-        <variable name="rollItem"
-                  type="sgtmelon.scriptum.app.model.item.RollItem"/>
+        <variable name="rollItem" type="sgtmelon.scriptum.app.model.item.RollItem"/>
 
     </data>
 
