--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -6,22 +6,13 @@
     <data>
 
         <import type="sgtmelon.scriptum.office.Help.Clr"/>
-
         <import type="sgtmelon.scriptum.office.Help.Pref"/>
-
         <import type="sgtmelon.scriptum.office.Help.Time"/>
+        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
+        <import alias="text" type="android.text.TextUtils"/>
+        <import alias="v" type="android.view.View"/>
 
-        <import alias="def"
-                type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
-
-        <import alias="text"
-                type="android.text.TextUtils"/>
-
-        <import alias="v"
-                type="android.view.View"/>
-
-        <variable name="noteItem"
-                  type="sgtmelon.scriptum.app.model.item.NoteItem"/>
+        <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
     </data>
 
