--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -6,11 +6,9 @@
     <data>
 
         <import type="sgtmelon.scriptum.R"/>
-
         <import type="sgtmelon.scriptum.office.Help.Clr"/>
 
-        <variable name="rollItem"
-                  type="sgtmelon.scriptum.app.model.item.RollItem"/>
+        <variable name="rollItem" type="sgtmelon.scriptum.app.model.item.RollItem"/>
 
     </data>
 
