--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -6,20 +6,12 @@
     <data>
 
         <import type="sgtmelon.scriptum.R"/>
-
         <import type="sgtmelon.scriptum.office.Help.Pref"/>
+        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
+        <import alias="v" type="android.view.View"/>
 
-        <import alias="def"
-                type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
-
-        <import alias="v"
-                type="android.view.View"/>
-
-        <variable name="noteItem"
-                  type="sgtmelon.scriptum.app.model.item.NoteItem"/>
-
-        <variable name="keyEdit"
-                  type="boolean"/>
+        <variable name="keyEdit" type="boolean"/>
+        <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
     </data>
 
